2007-02-06  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp (banish-pointer): call screen-true-height

	* core.lisp (frame-raise-window): hide windows & raise before focusing window
	(screen-true-height): new function

2007-02-05  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp ("ratclick"): call current-window
	("gmove"): likewise
	("insert"): likewise
	("mark"): likewise
	(other-hidden-window): remove unused lexical var f

	* core.lisp (restore-window): update all X caches for window
	(xwin-type): an aspect hint window is considered :maxsize
	(maybe-hide-windows): rename from maybe-hide-window. take the
	group and frame as args. hide all windows in the frame.
	(focus-window): don't hide any windows
	(frame-raise-window): call maybe-hide-windows
	(current-window): new function

2007-02-04  Shawn Betts  <sabetts@shitbender.gagrod>

	* primitives.lisp (screen): add withdrawn-windows slot

	* core.lisp (geometry-hints): use ceiling for aspect ratio hints
	(reparent-window): grab the server
	(remove-window): remove function
	(find-withdrawn-window): new function
	(restore-window): likewise
	(withdraw-window): likewise
	(destroy-window): likewise
	(:map-request): handle withdrawn windows
	(:unmap-notify): call withdraw-window
	(:destroy-notify): call destroy-window
	(:reparent-notify): new event handler

2007-02-01  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (pull-other-hidden-window): rename from other-hidden-window. all callers updated.
	(other-hidden-window): new function

	* core.lisp (save-frame-excursion): new macro

2007-01-31  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (split-frame-v): call *new-frame-hook*
	(split-frame-h): likewise

	* primitives.lisp (*new-frame-hook*): new hook

	* core.lisp (current-group): new function

2007-01-28  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (set-font): open the font for each screen
	(add-group): put the new group at the end of the group list
	(remove-window): update the mode line