@@ -1,3 +1,7 @@
+2007-02-09  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* primitives.lisp (dformat): string out non base-char chars
+
 2007-02-06  Shawn Betts  <sabetts@shitbender.gagrod>
 
 	* user.lisp (banish-pointer): call screen-true-height
